More compiler plugin updates, update archetypes for Java7